# chromalib

./: CMakeLists.txt  LICENSE  README.md
chromalib/include/chroma/: avg_timer.h  chroma.h  circular_buffer.h  scoped_timer.h
tests/: CMakeLists.txt  avg_timer_tests.cpp  circular_buffer_tests.cpp
